# dependcytest

./: Cargo.toml  README.md  lib.rs
.ink/abi_gen/: Cargo.toml  main.rs
