[package]
name = "dependcytest"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_metadata = { git = "https://github.com/paritytech/ink", tag="v3.0.0-rc1", package = "ink_metadata", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink", tag="v3.0.0-rc1", package = "ink_env", default-features = false }

ink_storage = { git = "https://github.com/paritytech/ink", tag="v3.0.0-rc1", package = "ink_storage", default-features = false }
ink_primitives = { git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc1", package = "ink_primitives", default-features = false }

ink_lang = { git = "https://github.com/paritytech/ink", tag="v3.0.0-rc1", package = "ink_lang", default-features = false }
ink_prelude = {git = "https://github.com/paritytech/ink",tag = "v3.0.0-rc1", default-features = false }


scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.4", default-features = false, features = ["derive"], optional = true }

schnorrkel = { version = "0.9.1",features = ["u64_backend"],default-features = false}


[lib]
name = "dependcytest"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "schnorrkel/std",
]
ink-as-dependency = []